# Motion-Film-Lab

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  MFL  main.c
libs/: CMakeLists.txt
libs/FFmpeg/: decode_encode_video.c  decode_encode_video.h  decodeaudio.c  decodeaudio.h  decodestream.c  decodestream.h  decodevideo.c  decodevideo.h  demuxvideo.c  demuxvideo.h  encodeaudio.c  encodeaudio.h  encodevideo.c  encodevideo.h  metadata.c  metadata.h  remux.c  remux.h  scalevideo.c  scalevideo.h  transcoding.c  transcoding.h
libs/SDLLIB/: sdlwindow.c  sdlwindow.h
libs/sys/: sys_fileio.c  sys_fileio.h  sys_folder.c  sys_folder.h
libs/widgets/: window.c  window.h
scripts/: build.sh  install.sh  run.sh  uninstall.sh
