add_executable(${PROJECT_NAME} main.c)

target_link_libraries(${PROJECT_NAME} PRIVATE Widgets FFmpeg Sys ${GTK_LIBRARIES} ${SDL2_LIBRARIES} 
			${GSTREAMER_LIBRARIES} ${AVCODEC_LIBRARY} ${AVFORMAT_LIBRARY}
			${AVUTIL_LIBRARY} ${AVDEVICE_LIBRARY}
			)

target_include_directories(
			${PROJECT_NAME} PRIVATE ${AVCODEC_INCLUDE_DIR}
			${AVFORMAT_INCLUDE_DIR} ${AVUTIL_INCLUDE_DIR}
			${AVDEVICE_INCLUDE_DIR}
		)

INSTALL (TARGETS ${PROJECT_NAME})  
